src/home/Splash.css
@import url("../Base.css");

.mainHeading {
    text-align: left;
    width: 100vw;
    padding: 3rem 0 0 2.2rem;
    line-height: 0.6;
}

.subHeading {
    text-align: left;
    width: 100vw;
    color: var(--contrast);
    padding: 0 0 0 calc(2.2rem + .6em);
    line-height: 0.1em;
}

.intro {
    text-align: left;
    width: 100vw;
    color: var(--primary-text);
    padding: 0 0 100vh calc(2.2rem + .8%);
    line-height: 1;
}

.aboutMeContainer {
    visibility: visible;
    position: fixed;
    font-family: var(--nav-font-family);
    font-size: var(--nav-font-size);
    color: var(--primary-text);
    bottom: .5rem;
    left: 0;
    right: 0;
    margin: auto;
    width: max-content;
    cursor: pointer;
    animation: fadeInAnim ease 2s;
    transition: var(--transition);
}

.aboutMeContainerHidden {
    opacity: 0;
    visibility: hidden;
    transform: translateY(3rem);
}

.aboutMeContainer:hover {
    color: var(--contrast);
}


@media only screen and (max-width: 1100px) {
    .mainHeading {
        padding-left: 1rem;
    }

    .subHeading {
        text-align: left;
        width: 100vw;
        color: var(--contrast);
        padding: 0 0 0 1.5rem;
        line-height: 0.1em;
    }

    .intro {
        text-align: left;
        width: 90vw;
        color: var(--primary-text);
        padding: 0 1rem 0 1.5rem;
        line-height: 1;
    }
}

